# Gargantua

./: .gitignore  CMakeLists.txt  README.md
shaders/: gargantua.comp  interstellar.comp  schwarzschild.comp  simple_test.comp  test.comp
src/: main.cpp
src/core/: window.cpp  window.h
src/renderer/: compute_pipeline.cpp  compute_pipeline.h  swapchain.cpp  swapchain.h  vulkan_context.cpp  vulkan_context.h
